syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message TokenTransferCount {
  option (gorm.opts) = {ormable: true};

  string transaction_hash = 1 [(gorm.field).tag = {index: "token_transfer_count_idx_transaction_hash"}];
  int32 log_index = 2 [(gorm.field).tag = {index: "token_transfer_count_idx_log_index"}];

  // Postres primary key
  // NOTE: also use as count
  uint64 id = 3;
}
